fixed list items being off center

--- a/src/main.scss
+++ b/src/main.scss
@@ -20,17 +20,14 @@ li {
 }
 
 .navbar {
-  ul {
-    display: flex;
-    flex-flow: row wrap;
-    li {
-      list-style: none;
-      margin: 20px 5px;
-      .link {
-        font-size: 1.5rem;
-        text-decoration: none;
-        color: black;
-      }
-    }
+  display: flex;
+  flex-flow: row wrap;
+  .link {
+    font-family: Comfortaa, sans-serif;
+    list-style: none;
+    margin: 20px 5px;
+    font-size: 1.4rem;
+    text-decoration: none;
+    color: black;
   }
 }
